# tencent-tdw

./: README.md
qe/: CONTRIBUTORS  LICENSE  README  build-common.xml  build.properties  build.xml  eclipse_formatter_apache.xml
qe/cli/: ivy.xml
qe/common/: ivy.xml
qe/conf/: hive-default.xml  hive-log4j.properties
qe/contrib/: build.xml
qe/data/conf/: hive-site.xml
qe/data/files/: datatest.txt  datatypes.txt  db1_kv.txt  db2_kv.txt  domain_id.txt  kv.txt  kv6-p0-sp1.txt  kv6-p0-sp2.txt  kv6-p1-sp1.txt  kv6-p1-sp2.txt  kv6.txt  md_join_test_tbl1.txt  md_join_test_tbl2.txt  nulltest.txt  (+16 more)
qe/doc/: admin.html  admin.md
qe/jdbc/: build.xml
qe/lib/: commons-cli-2.0-SNAPSHOT.LICENSE  commons-dbcp-1.4.LICENSE  commons-logging-1.0.4.LICENSE
qe/metastore/: build.xml
qe/protoc-plugin/: README  bootstrap.sh  cleanup.sh  configure.in
qe/protoc-plugin/src/: Makefile.am
qe/protoc-plugin/src/google/protobuf/compiler/tdw/: plugin_main.cc  tdw_dependent_file.cc  tdw_dependent_file.h  tdw_field.cc  tdw_field.h  tdw_file.cc  tdw_file.h  tdw_generator.cc  tdw_generator.h  tdw_helpers.cc  tdw_helpers.h  tdw_message.cc  tdw_message.h
qe/protoc-plugin/src/test/proto/: a.proto  b.proto  c.proto
qe/ql/: build.xml
qe/recordio/: build.xml
qe/script/: clean_doc.sh  reset_meta.sql  tdw_meta_global_db.sql  tdw_meta_init.sql  tdw_meta_pbjar_db.sql  tdw_meta_query_info_db.sql  tdw_meta_segment_db.sql
qe/service/: build.xml
qe/shims/: build.xml  ivy.xml
qe/tdwpl/: Makefile  PL  PLC  mark.conf  tdw.py  tdw_general.py  tdw_loader.py  tdw_sql_lib.py  tdwpl  tdwpl.py
(+2447 files in other folders)
